tests/api/reference/negative/14-match-unknown-kind.asm
const invalid: map = match.tokens("value:number", "42")
